solved the tailwind not showing on slices issue

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -34,6 +34,10 @@
     filter: grayscale(1);
 }
 
+::selection{
+    @apply bg-dark-purple
+}
+
 input[type=radio]{
     display:none;
 }
